--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 :root {
-  --background: #F3F4F6;
+  --background: #f3f4f6;
   --foreground: #000000;
 }
 
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #F3F4F6;
+    --background: #f3f4f6;
     --foreground: #050404;
   }
 }
