--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -112,7 +112,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
-  --icon-primary: #00D3F3;
+  --icon-primary: #00d3f3;
 }
 
 @layer base {
